# Vulkanite

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VulkanBuffer.cpp  VulkanBuffer.h  camera.cpp  camera.h  compile linux.txt  compile.bat  computeMikkTSpace.cpp  computeMikkTSpace.h  conan.cmake  core_utils.cpp  core_utils.h  dlss.cpp  dlss.h  fsr2.cpp  fsr2.h  imgui_widget.cpp  imgui_widget.h  loader.cpp  loader.h  loaderGLTF.cpp  loaderGltf.cpp  loaderGltf.h  loaderObj.cpp  loaderObj.h  loaderUSD.cpp  main.cpp  materialx.cpp  materialx.h  rasterizer.cpp  rasterizer.h  raytrace.cpp  raytrace.h  scene.cpp  scene.h  (+3 more)
SphericalHarmonicsExtractor/: CMakeLists.txt  spherical_harmonics_extractor.cpp
Vulkanite/: Vulkanite.7z
cmake/: utilities.cmake
models/: abeautifulgame_draco.glb  barrel.mtl  scene.gltf
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shader.frag  shader.vert  shaderMotionVector.frag  shaderMotionVector.vert
textures/: autoshop_01_4k.hdr  limpopo_golf_course_1k.hdr
